--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,21 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// mysql connector
+	implementation 'mysql:mysql-connector-java:8.0.31'
+	// spring cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	//caffeine cache
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+	// email
+	implementation 'org.springframework.boot:spring-boot-starter-email'
+	// spring security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
