--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.1.6'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '2.7.17'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = '11'
 }
 
 repositories {
@@ -27,7 +27,7 @@ dependencies {
 	//caffeine cache
 	implementation 'com.github.ben-manes.caffeine:caffeine'
 	// email
-	implementation 'org.springframework.boot:spring-boot-starter-email'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	// spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
