--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+# 這是 properties 檔的註解方式
+# server 啟動的 port 號
+server.port = 8081
+# mysql 連線相關資訊
+spring.datasource.url=jdbc:mysql://localhost:3306/attendance?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
 
+#sql schema 檔案來源
+#spring.sql.init.schema-locations=classpath:schema_mysql.sql
+#[always][embedded][never]
+spring.sql.init.mode=always
+#資料編碼
+spring.sql.init.encoding=UTF-8
