--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.sql.init.mode=always
 #資料編碼
 spring.sql.init.encoding=UTF-8
+#auth_code expired time
+#unit: minute
+authcode.expired.time=30
